--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -15,38 +15,38 @@
 				below and resubmit. </span>
 		</div>
 		<h3>Deliver my taco masterpieces to...</h3>
-		<label for="name">Name: </label> <input type="text" th:field="*{name}" />
+		<label for="name">Name: </label> <input type="text" th:field="*{deliveryName}" />
 		<span class="validationError"
- 			th:if="${#fields.hasErrors('name')}"
- 			th:errors="*{name}">
+ 			th:if="${#fields.hasErrors('deliveryName')}"
+ 			th:errors="*{deliveryName}">
  			Name error
  		</span>
 		<br /> <label for="street">Street address: </label> <input type="text"
-			th:field="*{street}" />
+			th:field="*{deliveryStreet}" />
 		<span class="validationError"
- 			th:if="${#fields.hasErrors('street')}"
- 			th:errors="*{street}">
+ 			th:if="${#fields.hasErrors('deliveryStreet')}"
+ 			th:errors="*{deliveryStreet}">
  			Street error
  		</span>
 			 <br /> <label for="city">City: </label> <input
-			type="text" th:field="*{city}" /> 
+			type="text" th:field="*{deliveryCity}" /> 
 		<span class="validationError"
- 			th:if="${#fields.hasErrors('city')}"
- 			th:errors="*{city}">
+ 			th:if="${#fields.hasErrors('deliveryCity')}"
+ 			th:errors="*{deliveryCity}">
  			City error
  		</span>
 			<br /> <label for="state">State:
-		</label> <input type="text" th:field="*{state}" /> 
+		</label> <input type="text" th:field="*{deliveryState}" /> 
 		<span class="validationError"
- 			th:if="${#fields.hasErrors('state')}"
- 			th:errors="*{state}">
+ 			th:if="${#fields.hasErrors('deliveryState')}"
+ 			th:errors="*{deliveryState}">
  			State error
  		</span>
 		<br /> <label for="zip">Zip
-			code: </label> <input type="text" th:field="*{zip}" /> 
+			code: </label> <input type="text" th:field="*{deliveryZip}" /> 
 		<span class="validationError"
- 			th:if="${#fields.hasErrors('zip')}"
- 			th:errors="*{zip}">
+ 			th:if="${#fields.hasErrors('deliveryZip')}"
+ 			th:errors="*{deliveryZip}">
  			Zip error
  		</span>
 		<br />
